public/assets/css/custom.css
                * {
                    margin: 0;
                    padding: 0;
                    box-sizing: border-box;
                }
                
                body {
                    font-family: 'Montserrat', sans-serif;
                    overflow-x: hidden;
                }
                /* #header-sec {
    height: 970px;
    background-image: url('../../../images/Background-Image.png') !important;
    background-position: center;
    background-repeat: no-repeat;
    background-size: cover;
} */
                
                #navigation-bar {
                    position: -webkit-sticky;
                    position: sticky;
                    top: 0;
                    z-index: 99999999999;
                }
                
                .container-fluid {
                    padding: 1% 12% !important;
                }
                
                .bold-font {
                    font-weight: bolder !important;
                }
                
                #nav-items {
                    font-size: 18px !important;
                }
                /* .rotate-img {
    height: 500px !important;
    transform: rotate(5deg);
} */
                
                #header-sec {
                    position: relative;
                    height: 100%;
                    padding-bottom: 380px;
                }
                
                .main-slider {
                    height: 640px;
                    width: 450px;
                    background-color: orangered;
                    float: right;
                    border-radius: 20px;
                    position: absolute;
                    top: 0;
                    right: -5%;
                    -webkit-box-shadow: 3px 3px 5px 6px #ccc;
                    /* Safari 3-4, iOS 4.0.2 - 4.2, Android 2.3+ */
                    -moz-box-shadow: 3px 3px 5px 6px #ccc;
                    /* Firefox 3.5 - 3.6 */
                    box-shadow: -10px -10px 5px #ccc;
                    /* Opera 10.5, IE 9, Firefox 4+, Chrome 6+, iOS 5 */
                }
                
                .temp {
                    position: absolute;
                    top: -10px;
                    right: -5%;
                }
                
                .slider-img {
                    width: 530px;
                }
                /* our service section style */
                
                #service-sec {
                    background-color: rgba(239, 239, 239, 0.3);
                    position: relative;
                    z-index: -88888;
                    padding-bottom: 80px !important;
                }
                
                #service-sec h2 {
                    margin-top: 20px;
                }
                
                .service-div {
                    margin-top: 80px;
                }
                /* align service images vertically centered  */
                
                .service-div-img {
                    display: flex;
                    justify-content: center;
                    align-items: center;
                }
                
                .service-div-img-right {
                    display: flex;
                    justify-content: center;
                    align-items: center;
                }
                /* Highlight Product section start */
                
                #highlight-product-sec {
                    min-height: 400px;
                    background-color: white;
                    display: flex;
                    flex-direction: column;
                    align-items: center;
                    justify-content: center;
                }
                
                .swiper-container {
                    width: 100%;
                    height: 400px;
                }
                
                .swiper-wrapper {
                    align-items: center;
                    margin-left: 80px;
                }
                
                .swiper-slide {
                    width: 200px;
                    height: 250px !important;
                    /* border: 1px solid black; */
                }
                
                .swiper-slide img {
                    height: 75%;
                    width: 75%;
                }
                
                .swiper-slide-active {
                    transform: scale(1.6);
                    transition: 0.4s ease;
                    /* box-shadow: 2px 0px 5px #ccc; */
                }
                /* Highlight Product section end */
                /* Product section start */
                
                #category-sec {
                    position: relative;
                }
                
                .card {
                    /* box-shadow: 4px 5px 18px -9px rgba(0, 0, 0, 0.64) !important; */
                    /* border-radius: 0.9em !important; */
                    border: none !important;
                }
                /* our product categories section style */
                
                .card-style {
                    box-shadow: 4px 5px 30px -9px rgba(0, 0, 0, 0.64);
                    border-radius: 0.9em !important;
                    border: none;
                }
                
                .category-style {
                    margin-top: 100px;
                }
                
                #product-sub-container {
                    margin-top: 120px !important;
                }
                
                #product_btn {
                    position: absolute;
                    top: 10%;
                    left: 45%;
                    transform: translate(-50%, 0);
                }
/* ... */

